# python-x-docker-handbook

./: .gitignore  Changelog.md  Dockerfile  Dockerfile_backup  LICENSE  Makefile  Makefile_backup  Readme.md  Readme_backup  hello_world.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE
core/db_in_docker/: Readme.md  docker-compose.yaml
core/db_in_docker/src/db_migration/: V1__create_table.sql
core/fastapi_redis/: Dockerfile  Makefile  README.md  docker-compose-model-training.yaml  docker-compose-server.yaml  pyproject.toml
core/fastapi_redis/requirements/: app.txt  dev.txt
core/fastapi_redis/src/: data.py  main.py  model.py
core/fastapi_redis/src/data/: venues.csv
core/fastapi_redis/src/registry/model_1.0_050623_102618/: model.joblib  model_metrics.json
core/fastapi_redis/src/registry/model_1.0_050623_121056/: model_metrics.json
core/interactively-running/: Dockerfile  Makefile  Readme.md  docker-notebook.yml  requirements.txt
core/powerful-docker-compose/: Dockerfile  Dockerfile-logger  Makefile  Readme.md  docker-compose.yml  docker-log.yml  log_server.py  main.py
core/reproducible-dev-env/: Dockerfile  Makefile  Readme.md
core/reproducible-dev-env/src/: main.py  sudoku.py
